# dockerfiles

R/: Dockerfile
anaconda3/: Dockerfile
apereo_cas/: Dockerfile
context/: Dockerfile  Dockerfile.2  adduser.sh  entrypoint.sh
darktable/: APKINDEX  Dockerfile  run_darktable.docker
evince/: Dockerfile
gimp/: Dockerfile
h264encoder/: Dockerfile  h264enc  install
h264encoder/doc/: AUTHORS  ChangeLog  README.encoding  README.h264enc  README.matrices  preset.cfg
h264encoder/lsdvd/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.ac  lsdvd.c  lsdvd.h  ocode.c  ohuman.c  oxml.c  oxml.h
h264encoder/man/: h264enc.1
h264encoder/matrices/: audionut_general_matrix  audionut_high_bitrate_matrix  eqm_avc_hr_matrix  mp4guy_high_detail_matrix  mp4guy_hrm_matrix  mp4guy_low_bitrate_matrix  mp4guy_lrm_matrix  mp4guy_mrm_matrix  mp4guy_smooth_matrix  prestige_matrix  q2_matrix  q_matrix  soulhunter_v1_matrix  soulhunter_v2_matrix  xmen3_matrix
hugo/: .bashrc  Dockerfile  Dockerfile.4
inkscape/: Dockerfile
jekyll/: Dockerfile  Dockerfile.stages  entrypoint.sh
libreoffice/: Dockerfile  runme.sh
miniconda3/: Dockerfile  requirements.txt
mutt/: Dockerfile  entrypoint.sh
mutt/.mutt/: muttrc  signature
postgresql/: Dockerfile  docker-compose.yml  docker_run_Example.txt
postgresql_sqitch/: Dockerfile  Dockerfile.pgrouting  Dockerfile.postgis  dockerfile.test  stack.yml
sane/: Dockerfile
